--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ body {
 .quiz-container h1 {
   font-size: 2.2rem;
   margin-bottom: 20px;
+  margin-left: 30px;
   color: #0ff;
   text-shadow: 0 0 12px #0ff, 0 0 22px #00e6e6;
 }
@@ -53,6 +54,7 @@ body {
 
 .quiz-container button {
   margin-top: 20px;
+  margin-left: 40px;
   padding: 12px 24px;
   font-size: 16px;
   border: none;
